.ops/postgres/namespace-backend-dr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend-dr
  labels:
    name: backend-dr
