.ops/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ternent-postgres
  namespace: backend
spec:
  selector:
    app: ternent-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
